fix: layout issue on search results page
close #43

--- a/sites/all/themes/heybabies/sass/_main.scss
+++ b/sites/all/themes/heybabies/sass/_main.scss
@@ -490,6 +490,7 @@ tbody
         padding: 8px 8px 8px 48px;
         display: block;
         width: 75%;
+        height: 80px;
         margin: 0 auto;
         outline-color: white;
         font-weight: 400;
